    + Removed, merged upsteram
  * debian/patches/02_missing_format.patch:
    + Removed, fixed upstream
  * debian/patches/03_deal_with_absence_of_gnome-session.patch:
    + Removed, merged upstream
  * debian/patches/04_superP.patch: Refreshed
  * debian/control.in: Update build-depends
  * debian/control.in: Add hwdata and libcolord-dev build-depends

 -- Sjoerd Simons <sjoerd@debian.org>  Tue, 25 Oct 2011 16:31:49 +0200

gnome-settings-daemon (3.0.3-3) unstable; urgency=low

  * debian/patches/03_deal_with_absence_of_gnome-session.patch:
    - Deal with absence of gnome-session gracefully and don't crash if
      gnome-session is not running. Patch cherry-picked from upstream Git.
      Closes: #645429
  * Remove obsolete conffiles in /etc/gnome/config on upgrades.
    Closes: #645443

 -- Michael Biebl <biebl@debian.org>  Mon, 17 Oct 2011 18:07:27 +0200

gnome-settings-daemon (3.0.3-2) unstable; urgency=low

  * debian/control.in:
    - Make libgudev-1.0-dev linux-any.

 -- Michael Biebl <biebl@debian.org>  Fri, 14 Oct 2011 16:14:37 +0200

gnome-settings-daemon (3.0.3-1) unstable; urgency=low

  [ Jean Schurger ]
  * New upstream release.
  * Removed 01_numlock.patch (b-g-o #631989 is fixed)
  * Added 01_medias_keys_dont_go_up_to_11.patch
  * Added 02_missing_format.patch
  * debian/control.in
    - Standards-Version is 3.9.2, no changes needed.
    - Added dependencied to enable the update plugin (packagekit)
    - Bumped pulseaudio dependency according to the volume patch

  [ Josselin Mouette ]
  * Move g-s-d-dev to libdevel. Closes: #640125.

  [ Jordi Mallach ]
  * Update Vcs-* fields to new URLs.

  [ Michael Biebl ]
  * Upload to unstable.
  * debian/watch:
    - Switch to version 3.
    - Track .xz tarballs.
  * Bump debhelper compatibility level to 8.
    - Update Build-Depends on debhelper.
    - Strip debian/tmp/ from .install files.

 -- Michael Biebl <biebl@debian.org>  Fri, 14 Oct 2011 13:17:13 +0200
