@@ -32,8 +32,8 @@ Build-Depends: cdbs,
                libpackagekit-glib2-dev (>= 0.6.4),
                libupower-glib-dev (>= 0.9.1),
                libgudev-1.0-dev [linux-any],
-               hwdata,
-               libcolord-dev (>= 0.1.12)
+               libcolord-dev (>= 0.1.12),
+               hwdata (>= 0.227-1)
 Standards-Version: 3.9.2
 Vcs-Browser: http://anonscm.debian.org/viewvc/pkg-gnome/desktop/unstable/gnome-settings-daemon/
 Vcs-Svn: svn://anonscm.debian.org/svn/pkg-gnome/desktop/unstable/gnome-settings-daemon/
@@ -44,9 +44,9 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          libgnome2-common,
-         gsettings-desktop-schemas,
+         gsettings-desktop-schemas (>= 3.2.0),
          nautilus-data (>= 2.91.3-1)
-Recommends: pulseaudio
+Recommends: pulseaudio, hwdata (>= 0.227-1)
 Breaks: rhythmbox (<< 0.11.5),
         banshee (<< 0.13.2+dfsg-7),
         totem (<< 2.22.0),
