@@ -23,8 +23,10 @@ gnome-settings-daemon (3.2.1-1) UNRELEASED; urgency=low
   * debian/patches/04_superP.patch: Refreshed
   * debian/control.in: Update build-depends
   * debian/control.in: Add hwdata and libcolord-dev build-depends
+  * debian/control.in: make gnome-settings-daemon recommend hwdata
+  * debian/control.in: Make the gsettings-desktop-schemas depend more precise
 
- -- Sjoerd Simons <sjoerd@debian.org>  Tue, 25 Oct 2011 16:31:49 +0200
+ -- Sjoerd Simons <sjoerd@debian.org>  Wed, 26 Oct 2011 13:57:18 +0200
 
 gnome-settings-daemon (3.0.3-3) unstable; urgency=low
 
